# aisalesdr

./: .gitignore  README.md  SCALE.md
api/: index.py  pyproject.toml  requirements.txt  vercel.json
api/api/: index.py
api/app/: config.py  database.py  main.py
api/app/api/: routes.py
api/app/models/: __init__.py  base.py  lead.py
api/app/repositories/: __init__.py  lead_repository.py
api/app/schemas/: __init__.py  lead.py
api/app/services/: __init__.py  lead_service.py
web/: components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
web/src/: App.tsx
web/src/components/ui/: alert-dialog.tsx  button-variants.tsx  button.tsx  select.tsx
web/src/hooks/: use-leads.ts
web/src/pages/: add-lead-page.tsx  leads-list-page.tsx
web/src/services/: lead-api.ts
web/src/types/: lead.ts
